Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2091

Certificates with intermediate CA's do not work with Kudu

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 1.4.0
    • 1.5.0
    • security
    • None

    Description

      Certificates with intermediate CA's and chain certificates are not recognized by the Kudu security library. We need to track down the root of the problem and enable support for these certificates.

      Attachments

        Activity

          People

            sailesh Sailesh Mukil
            sailesh Sailesh Mukil
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: